--- a/Algo.tex
+++ b/Algo.tex
@@ -184,18 +184,17 @@ Si un caractère n'est pas valide (pas une lettre), l'algorithme passe à la fon
 
 \subsection{Fonctionnement du code sous\_vigenere}
 
-La fonction sous\_vigenere est utilisée pour vérifier si un caractère dans la chaîne à chiffrer (chaîne) est une lettre valide (majuscule ou minuscule).
-\\
-\\
-Elle commence par initialiser une variable $fin\_chaine$ à 1, ce qui indique que la chaîne est valide au début. Ensuite, elle boucle sur chaque caractère de la chaîne à partir de l'indice i.
-\\
+La fonction \texttt{sous\_vigenere} est utilisée pour vérifier si un caractère dans la chaîne à chiffrer (\texttt{chaine}) est une lettre valide (majuscule ou minuscule).
+
+Elle commence par initialiser une variable \texttt{fin\_chaine} à 1, ce qui indique que la chaîne est valide au début. Ensuite, elle boucle sur chaque caractère de la chaîne à partir de l'indice \(i\).
+
 \begin{itemize}
-    \item Si le caractère est nul (fin de chaîne), la fonction définit fin\_chaine à 0 et termine la vérification.
-    \item Si le caractère est une lettre majuscule (de A à Z), la fonction return pour indiquer qu'il s'agit d'un caractère valide.
-    \item Si le caractère est une lettre minuscule (de a à z), la fonction return.
-    \item Si le caractère n'est ni une lettre majuscule ni une lettre minuscule, la fonction revient au début de la boucle pour vérifier le prochain caractère.
+    \item Si le caractère est nul (fin de chaîne), la fonction définit \texttt{fin\_chaine} à 0 et termine la vérification.
+    \item Si le caractère est une lettre majuscule (de A à Z), la fonction \texttt{return} pour indiquer qu'il s'agit d'un caractère valide.
+    \item Si le caractère est une lettre minuscule (de a à z), la fonction \texttt{return}.
+    \item Si le caractère n'est ni une lettre majuscule ni une lettre minuscule, la fonction continue la boucle pour vérifier le prochain caractère.
 \end{itemize}
-\\
-Si la boucle se termine sans trouver de caractère valide, la fonction quitte sans retourner de résultat explicite, mais sa logique sert à gérer la progression à travers les caractères de la chaîne jusqu'à ce qu'un caractère valide soit trouvé.
+
+Si la boucle se termine sans trouver de caractère valide, la fonction quitte sans retourner de résultat explicite. Sa logique sert à gérer la progression à travers les caractères de la chaîne jusqu'à ce qu'un caractère valide soit trouvé.
 
 \end{document}
